[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/level/level_game.gd" type="Script" id=1]
[ext_resource path="res://scripts/resource/bd/bd_quizgame.tres" type="Resource" id=2]

[node name="level_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
bd_quiz = ExtResource( 2 )
color_right = Color( 0.054902, 0.952941, 0.133333, 1 )
color_wrong = Color( 0.980392, 0.0313726, 0.0313726, 1 )

[node name="question_info" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -327.273
margin_top = 6.72717
margin_right = 340.727
margin_bottom = 635.727
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_question" type="Label" parent="question_info"]
margin_top = 279.0
margin_right = 668.0
margin_bottom = 349.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 6

[node name="Panel" type="Panel" parent="."]
margin_left = 23.0
margin_top = 104.0
margin_right = 703.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_image" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 400 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_video" type="VideoPlayer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_audio" type="AudioStreamPlayer" parent="Panel"]

[node name="question_holder" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -354.5
margin_top = -726.545
margin_right = 354.5
margin_bottom = -23.5452

[node name="button_option_1" type="Button" parent="question_holder"]
margin_right = 709.0
margin_bottom = 172.0
size_flags_vertical = 3
custom_constants/hseparation = 20

[node name="button_option_2" type="Button" parent="question_holder"]
margin_top = 176.0
margin_right = 709.0
margin_bottom = 349.0
size_flags_vertical = 3
custom_constants/hseparation = 20

[node name="button_option_3" type="Button" parent="question_holder"]
margin_top = 353.0
margin_right = 709.0
margin_bottom = 526.0
size_flags_vertical = 3
custom_constants/hseparation = 20

[node name="button_option_4" type="Button" parent="question_holder"]
margin_top = 530.0
margin_right = 709.0
margin_bottom = 703.0
size_flags_vertical = 3
custom_constants/hseparation = 20
